--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "contentintent-dashboard",
   "version": "1.0.0",
   "description": "Package for ContentIntent Dashboard",
-  "main": "index.js",
+  "main": "sever.js",
   "repository": "https://github.com/smtlb/ContentIntentDashboard.git",
   "author": "Shannon Matloob <smtlb90@gmail.com>",
   "license": "MIT",
