--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Shannon Matloob <smtlb90@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "nodemon": "^1.11.0"
   }
 }
