--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "contentintent-dashboard",
   "version": "1.0.0",
   "description": "Package for ContentIntent Dashboard",
-  "main": "sever.js",
+  "main": "server.js",
   "repository": "https://github.com/smtlb/ContentIntentDashboard.git",
   "author": "Shannon Matloob <smtlb90@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "ejs": "^2.5.6",
     "express": "^4.15.3",
     "nodemon": "^1.11.0"
   }
