--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "mongodb": "^2.2.30",
+    "mongoose": "^4.11.6",
     "nodemon": "^1.11.0"
   }
 }
