--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.17.2",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "jquery": "^3.2.1",
     "method-override": "^2.3.9",
     "mongodb": "^2.2.30",
     "mongoose": "^4.11.6",
