--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Shannon Matloob <smtlb90@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "babel": "^6.23.0",
     "body-parser": "^1.17.2",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
@@ -14,6 +15,7 @@
     "method-override": "^2.3.9",
     "mongodb": "^2.2.30",
     "mongoose": "^4.11.6",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "webpack": "^3.6.0"
   }
 }
