--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "ejs": "~2.5.7",
     "express": "~4.15.5",
     "morgan": "~1.9.0",
-    "nodemon": "^1.12.1",
     "serve-favicon": "~2.4.5"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
