--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "engines": {
     "node": "8.7.0"
   },
-  "main": "app.js",
+  "main": "index.js",
   "dependencies": {
     "body-parser": "~1.18.2",
     "debug": "~2.6.9",
